# Django

./: README.md  pyproject.toml  requirements.txt  test.txt
bookings/: models.py  serializers.py
bookings/migrations/: 0001_initial.py  0002_alter_booking_experience_alter_booking_room_and_more.py  0003_merge_20250301_1550.py
categories/: models.py  serializers.py  urls.py  views.py
categories/migrations/: 0001_initial.py  0002_alter_category_options.py
common/: models.py
config/: permissions.py  settings.py  urls.py
dms/: admin.py  models.py
dms/migrations/: 0001_initial.py  0002_alter_chattingroom_users_alter_dm_room_alter_dm_user.py
experiences/: admin.py  models.py  serializers.py  urls.py  views.py
experiences/migrations/: 0001_initial.py  0002_experience_category_alter_perk_description_and_more.py  0003_alter_experience_category_alter_experience_host 2.py  0004_merge_20250301_1550.py
medias/: admin 2.py  models 2.py  models.py  urls.py  views.py
medias/migrations/: 0001_initial.py  0002_alter_vedio_experience.py  0003_alter_photo_experience_alter_photo_room_video_and_more.py  0004_alter_photo_experience_alter_photo_room.py  0005_alter_photo_file_alter_video_file.py  0006_rename_descprition_photo_description.py
reviews/: admin.py  models.py  serializers.py
rooms/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
tweets/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
wishlists/: admin.py  models.py  serializers.py  views.py
(+23 files in other folders)
